# vector_db

./: constants.py  embedding.py  main.py  pyproject.toml  setup.sh  setup_collection.py  start.sh  utils.py
volumes/milvus/etcd/member/snap/: db
volumes/milvus/rdb_data/: IDENTITY  LOG  LOG.old.1718758352461399
volumes/milvus/rdb_data_meta_kv/: 000009.sst  IDENTITY  LOG  LOG.old.1718758352386598  MANIFEST-000010
