[tool.poetry]
name = "vector-db"
version = "0.1.0"
description = ""
authors = ["nuj <nuj@socar.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymilvus = {extras = ["model"], version = "^2.4.3"}
datatype = "^0.8.5"
milvus-model = "^0.2.3"
sentence-transformers = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
